--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -75,7 +75,7 @@
                         <!-- Actions collées en bas si besoin -->
                         <div class="flex gap-2 mt-2">
                             <p-button label="View" [routerLink]="['/products', product.id]"></p-button>
-                            <p-button [rounded]="true" [text]="true" styleClass="p-button-secondary">
+                            <p-button [rounded]="true" [text]="true" styleClass="p-button-secondary" (click)="cart.add(product, 1)">
                             <i class="pi pi-cart-plus" style="font-size: 1.5rem"></i>
                             </p-button>
                         </div>
